nori-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part10__cloud_connecting_bottom_pane.snap
---
source: tui/src/chatwidget/tests/part10.rs
expression: "render_bottom_pane(&mut chat, 80)"
---
• Connecting to Nori Cloud (0s)


› draft while connecting
