nori-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part10__cloud_connecting_history.snap
---
source: tui/src/chatwidget/tests/part10.rs
expression: history_text(&mut rx)
---
• Connecting to Nori Cloud…
