nori-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part10__cloud_connection_failure_history.snap
---
source: tui/src/chatwidget/tests/part10.rs
expression: history_text(&mut rx)
---
■ Connection timed out. The agent did not respond.
