nori-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part10__cloud_local_command_error_with_load_session.snap
---
source: tui/src/chatwidget/tests/part10.rs
expression: rendered
---
■ /browse is unavailable. /browse runs on the local machine and is unavailable in cloud sessions.
