nori-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part10__cloud_quit_detach_feedback_with_load_session.snap
---
source: tui/src/chatwidget/tests/part10.rs
expression: rendered
---
• This session keeps running in the cloud. reattach later from the `nori cloud` picker
