nori-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part10__follow_only_attachment_keeps_messages_in_the_composer_but_allows_agent_switching.snap
---
source: tui/src/chatwidget/tests/part10.rs
expression: rendered
---
› This must stay local[follow-only-draft.png 32x16]
